@@ -2,6 +2,9 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
 {{$NEXT}}
 
+    [ FEATURES ]
+    - PodWeaver default config added
+
 0.052001 Sat Dec 27 17:40:03 2014 +0000
 
     [ FEATURES ]
